Part four of a multiphase refactoring. Most internals now use the Tag interface. This interface has been broadened to add set/get scanner and set/get endtag. Removed the org.htmlparser.tags.Tag class and moved the remaining (minor) functionality to the TagNode class. So now tags inherit directly from TagNode or CompositeTag. ** NOTE: If you have subclassed org.htmlparser.tags.Tag, use org.htmlparser.nodes.TagNode now.** Removed deprecated methods getTagBegin/getTagEnd and deleted unused classes: PeekingIterator and it's Implementation.

--- a/build.xml
+++ b/build.xml
@@ -269,6 +269,8 @@ Update the Web Site
       <include name="org/htmlparser/Remark.class"/>
       <include name="org/htmlparser/Tag.class"/>
       <include name="org/htmlparser/Text.class"/>
+      <include name="org/htmlparser/scanners/Scanner.class"/>
+      <include name="org/htmlparser/scanners/TagScanner.class"/>
       <include name="org/htmlparser/util/ParserException.class"/>
       <include name="org/htmlparser/util/ChainedException.class"/>
       <include name="org/htmlparser/util/NodeList*.class"/>
