--- a/build.xml
+++ b/build.xml
@@ -235,6 +235,9 @@ Update the Web Site
       <include name="org/htmlparser/Remark.java"/>
       <include name="org/htmlparser/Tag.java"/>
       <include name="org/htmlparser/Text.java"/>
+      <include name="org/htmlparser/http/ConnectionManager.java"/>
+      <include name="org/htmlparser/http/ConnectionMonitor.java"/>
+      <include name="org/htmlparser/http/Cookie.java"/>
       <include name="org/htmlparser/util/ParserException.java"/>
       <include name="org/htmlparser/util/ChainedException.java"/>
       <include name="org/htmlparser/util/NodeList.java"/>
@@ -271,6 +274,9 @@ Update the Web Site
       <include name="org/htmlparser/Text.class"/>
       <include name="org/htmlparser/scanners/Scanner.class"/>
       <include name="org/htmlparser/scanners/TagScanner.class"/>
+      <include name="org/htmlparser/http/ConnectionManager.class"/>
+      <include name="org/htmlparser/http/ConnectionMonitor.class"/>
+      <include name="org/htmlparser/http/Cookie.class"/>
       <include name="org/htmlparser/util/ParserException.class"/>
       <include name="org/htmlparser/util/ChainedException.class"/>
       <include name="org/htmlparser/util/NodeList*.class"/>
@@ -419,6 +425,7 @@ Update the Web Site
       <group title="Scanners" packages="org.htmlparser.scanners"/>
       <group title="Beans" packages="org.htmlparser.beans"/>
       <group title="Patterns" packages="org.htmlparser.visitors,org.htmlparser.nodeDecorators,org.htmlparser.filters"/>
+      <group title="Http" packages="org.htmlparser.http"/>
       <group title="Sax" packages="org.htmlparser.sax"/>
       <group title="Utility" packages="org.htmlparser.util,org.htmlparser.util.sort"/>
       <link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
