--- a/build.xml
+++ b/build.xml
@@ -222,11 +222,11 @@ Update the Web Site
   </target>
 
   <target name="compile" description="compile all java files">
-    <javac srcdir="${src}" includes="org/htmlparser/**" excludes="org/htmlparser/tests/**" debug="on" classpath="src:${commons-logging.jar}"/>
+    <javac srcdir="${src}" includes="org/htmlparser/**" excludes="org/htmlparser/tests/**" debug="on" classpath="src:${commons-logging.jar}" source="1.3"/>
   </target>
 
   <target name="compilelexer" description="compile lexer java files">
-    <javac srcdir="${src}" debug="on" classpath="src:${commons-logging.jar}" target="1.1">
+    <javac srcdir="${src}" debug="on" classpath="src:${commons-logging.jar}" target="1.1" source="1.3">
       <include name="org/htmlparser/lexer/*.java"/>
       <include name="org/htmlparser/nodes/*.java"/>
       <include name="org/htmlparser/Attribute.java"/>
@@ -249,7 +249,7 @@ Update the Web Site
   </target>
 
   <target name="compileparser" depends="compilelexer" description="compile parser java files">
-    <javac srcdir="${src}" debug="on" classpath="src:${commons-logging.jar}:${sax2.jar}">
+    <javac srcdir="${src}" debug="on" classpath="src:${commons-logging.jar}:${sax2.jar}" source="1.3">
       <include name="org/htmlparser/**/*.java"/>
       <exclude name="org/htmlparser/tests/**"/>
       <exclude name="org/htmlparser/lexerapplications/**/*.java"/>
@@ -325,7 +325,7 @@ Update the Web Site
   <target name="thumbelina" depends="JDK1.4,jarlexer" description="create thumbelina.jar" if="JDK1.4">
     <!-- Create the lib directory -->
     <mkdir dir="${lib}"/>
-    <javac compiler="javac1.4" srcdir="${src}" debug="on" classpath="src:${lib}/htmllexer.jar">
+    <javac compiler="javac1.4" srcdir="${src}" debug="on" classpath="src:${lib}/htmllexer.jar" source="1.3">
       <include name="org/htmlparser/lexerapplications/thumbelina/**/*.java"/>
     </javac>
     <jar jarfile="${lib}/thumbelina.jar"
@@ -342,7 +342,7 @@ Update the Web Site
   
   <!-- Run the unit tests -->
   <target name="test" depends="jar" description="run the JUnit tests">
-    <javac srcdir="${src}" includes="org/htmlparser/tests/**" debug="on">
+    <javac srcdir="${src}" includes="org/htmlparser/tests/**" debug="on" source="1.3">
       <classpath>
         <pathelement location="src"/>
         <pathelement location="${junit.jar}"/>
