--- a/build.xml
+++ b/build.xml
@@ -429,11 +429,11 @@ Update the Web Site
     <mkdir dir="${docs}/javadoc"/>
     <property name="javadoc.doctitle" value="HTML Parser ${versionNumber}"/>
     <property name="javadoc.header" value="&lt;A HREF=&quot;http://htmlparser.sourceforge.net&quot; target=&quot;_top&quot;>HTML Parser Home Page&lt;/A>"/>
-    <property name="javadoc.footer" value="&amp;copy; 2004 Derrick Oswald&lt;div align=&quot;right&quot;&gt;${TODAY_STRING}&lt;/div&gt;"/>
-    <property name="javadoc.bottom" value="HTML Parser is an open source library released under
-    &lt;A HREF=&quot;http://www.opensource.org/licenses/lgpl-license.html&quot; target=&quot;_top&quot;&gt;LGPL&lt;/A&gt;.&lt;BR&gt;
-    &lt;div align=&quot;right&quot;&gt;&lt;A HREF=&quot;http://sourceforge.net/projects/htmlparser&quot; target=&quot;_top&quot;&gt;
-    &lt;img src=&quot;http://sourceforge.net/sflogo.php?group_id=24399&amp;type=1&quot; width=&quot;88&quot; height=&quot;31&quot; border=&quot;0&quot; alt=&quot;SourceForge.net&quot;&gt;&lt;/A&gt;&lt;/div&gt;"/>
+    <property name="javadoc.footer" value="&amp;copy; 2005 Derrick Oswald&lt;div align=&quot;right&quot;&gt;${TODAY_STRING}&lt;/div&gt;"/>
+    <property name="javadoc.bottom" value="&lt;table width='100%'&gt;&lt;tr&gt;&lt;td&gt;HTML Parser is an open source library released under
+    &lt;a HREF=&quot;http://www.opensource.org/licenses/lgpl-license.html&quot; target=&quot;_top&quot;&gt;LGPL&lt;/a&gt;.&lt;/td&gt;&lt;td align='right'&gt;
+    &lt;a HREF=&quot;http://sourceforge.net/projects/htmlparser&quot; target=&quot;_top&quot;&gt;
+    &lt;img src=&quot;http://sourceforge.net/sflogo.php?group_id=24399&amp;type=1&quot; width=&quot;88&quot; height=&quot;31&quot; border=&quot;0&quot; alt=&quot;SourceForge.net&quot;&gt;&lt;/a&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;"/>
     <javadoc packagenames="org.htmlparser.*"
            sourcepath="${src}"
            classpath="${classes}"
@@ -452,15 +452,15 @@ Update the Web Site
       <footer>${javadoc.footer}</footer>
       <taglet name="HtmlTaglet" path="${resources}:${classes}"/>
       <group title="Main Package" packages="org.htmlparser"/>
-      <group title="Example Applications" packages="org.htmlparser.parserapplications,org.htmlparser.lexerapplications.tabby,org.htmlparser.lexerapplications.thumbelina,org.htmlparser.parserapplications.filterbuilder"/>
-      <group title="Tags" packages="org.htmlparser.tags,org.htmlparser.tags.data"/>
+      <group title="Example Applications" packages="org.htmlparser.parserapplications,org.htmlparser.lexerapplications.tabby,org.htmlparser.lexerapplications.thumbelina,org.htmlparser.parserapplications.filterbuilder*"/>
+      <group title="Nodes" packages="org.htmlparser.nodes,org.htmlparser.tags"/>
       <group title="Lexer" packages="org.htmlparser.lexer"/>
       <group title="Scanners" packages="org.htmlparser.scanners"/>
       <group title="Beans" packages="org.htmlparser.beans"/>
       <group title="Patterns" packages="org.htmlparser.visitors,org.htmlparser.nodeDecorators,org.htmlparser.filters"/>
       <group title="Http" packages="org.htmlparser.http"/>
       <group title="Sax" packages="org.htmlparser.sax"/>
-      <group title="Utility" packages="org.htmlparser.util,org.htmlparser.util.sort"/>
+      <group title="Utility" packages="org.htmlparser.util*"/>
       <link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
       <link href="http://www.saxproject.org/apidoc/"/>
     </javadoc>
@@ -471,7 +471,7 @@ Update the Web Site
   <target name="release" depends="jar,thumbelina,filterbuilder,javadoc" description="prepare the release files">
   </target>
 
-  <!-- Prepare the sources zip, allowing folks to build the code -->
+  <!-- Create the source zip. -->
   <target name="sources" description="create the source zip">
     <zip destfile="src.zip" defaultexcludes="no">
       <zipfileset dir="${src}" prefix="${src}" includes="**/*.java **/*.html **/*.gif **/*.form **/*.properties"/>
@@ -482,21 +482,22 @@ Update the Web Site
   </target>
 
   <!-- Perform the htmlparser integration -->
-  <target name="htmlparser" depends="release,sources"
-    description="glom the release and source files into the distribution zip file">
+  <target name="htmlparser" depends="init,release,sources"
+    description="create distribution zip file">
     <mkdir dir="${distribution}"/>
+    <fixcrlf srcDir="${docs}" destDir="${distribution}" includes="release.txt" eol="crlf"/>
     <zip zipfile="${distribution}/htmlparser${versionTag}.zip">
       <zipfileset dir="${bin}" prefix="htmlparser${versionQualifier}/${bin}" includes="*.bat"/>
       <zipfileset dir="${bin}" prefix="htmlparser${versionQualifier}/${bin}" includes="*" excludes="*.bat" filemode="755"/>
-      <zipfileset dir="${docs}" prefix="htmlparser${versionQualifier}/${docs}" excludes="docs/**,samples/**"/>
-      <zipfileset dir="${wiki}" prefix="htmlparser${versionQualifier}/${docs}/wiki"/>
+      <zipfileset dir="${docs}" prefix="htmlparser${versionQualifier}/${docs}" excludes="samples/**"/>
       <zipfileset dir="${lib}" prefix="htmlparser${versionQualifier}/${lib}"/>
       <zipfileset dir="." prefix="htmlparser${versionQualifier}/" includes="src.zip"/>
       <!-- Copy the release notes as readme.txt in the base release directory -->
-      <zipfileset dir="${docs}" includes="release.txt" fullpath="htmlparser${versionQualifier}/readme.txt"/>
+      <zipfileset dir="${distribution}" fullpath="htmlparser${versionQualifier}/readme.txt" includes="release.txt"/>
       <!-- Copy the LGPL license.txt to the base release directory -->
       <zipfileset dir="${resources}" includes="license.txt" fullpath="htmlparser${versionQualifier}/license.txt"/>
     </zip>
+    <delete file="${distribution}/release.txt"/>
   </target>
   
   <target name="clean" description="cleanup">
