--- a/build.xml
+++ b/build.xml
@@ -5,8 +5,6 @@ Build Procedure
 
 Release Procedure
 - cd htmlparser
-- 'ant wiki' captures the PhpWiki from http://htmlparser.sourceforge.org/docs/wiki to
-  the docs/wiki directory (except for indirect image references).
 - set environment variables CVSROOT and CVS_RSH (see changelog task)
 - 'ant changelog' generates htmlparser/ChangeLog (this will be changed to use the previous version tag someday)
 - edit the ChangeLog to exclude changes already incorporated - the CVS date spec
@@ -19,7 +17,7 @@ Release Procedure
   and enhancements completed
 - perform a CVS update on htmlparser/ to identify new and changed files
 - commit changed files (i.e. Parser.java, docs/release.txt, docs/changes.txt,
-  docs/release.txt and docs/wiki) to the head revision using a reason of the form:
+  and docs/release.txt) to the head revision using a reason of the form:
     Update version to 1.5-20040522.
 - use CVS to tag the current head revisions with a name like v1_5_20040522.
 - use CVS to checkout everything with the tag created above
@@ -68,7 +66,6 @@ Submit News
 - SUBMIT
 
 Update the Web Site
-- remove the local docs/wiki directory
 - create a tarball of the docs directory
     tar -tf docs.tar
 - use secure copy to move the tarball onto the shell.sourceforge.net server
@@ -89,11 +86,6 @@ Update the Web Site
     mv ../olddocs/javadoc_1_3 .
     mv ../olddocs/performance .
     mv ../olddocs/test .
-    mv ../olddocs/wiki .
-- edit the panel.html file to change the target of the Wiki link from
-    wiki/index.html
-  to
-    wiki/index.php
 - delete the old htmldocs directory
     rm -rf ../oldhtdocs
 
@@ -114,7 +106,6 @@ Update the Web Site
   <property name="src" value="src"/>
   <property name="classes" value="${src}"/>
   <property name="docs" value="docs"/>
-  <property name="wiki" value="${docs}/wiki"/>
   <property name="bin" value="bin"/>
   <property name="lib" value="lib"/>
   <property name="resources" value="resources"/>
@@ -166,16 +157,21 @@ Update the Web Site
     <delete file="${lib}/fit_distribution.zip"/>
   </target>
 
-  <target name="JDK1.4">
+  <target name="JDK_OK">
       <condition property="JDK1.4">
         <or>
           <equals arg1="1.4" arg2="${ant.java.version}"/>
           <equals arg1="1.5" arg2="${ant.java.version}"/>
         </or>
       </condition>
+      <condition property="JDK1.5">
+        <or>
+          <equals arg1="1.5" arg2="${ant.java.version}"/>
+        </or>
+      </condition>
   </target>
 
-  <target name="JDK_Warning" unless="JDK1.4">
+  <target name="JDK_Warning" unless="JDK_OK">
     <echo message="***************************************************"/>
     <echo message="*  WARNING: The detected JDK version is not 1.4!  *"/>
     <echo message="***************************************************"/>
@@ -368,11 +364,11 @@ Update the Web Site
   </target>
 
   <!-- Create the Thumbelina jar -->
-  <target name="thumbelina" depends="JDK1.4,jarlexer" description="create thumbelina.jar" if="JDK1.4">
+  <target name="thumbelina" depends="JDK_OK,jarlexer" description="create thumbelina.jar" if="JDK1.5">
     <!-- Create the lib directory -->
     <mkdir dir="${lib}"/>
     <mkdir dir="${classes}"/>
-    <javac srcdir="${src}" destdir="${classes}" debug="on" classpath="${classes}:${lib}/htmllexer.jar" source="1.3">
+    <javac srcdir="${src}" destdir="${classes}" debug="on" classpath="${classes}:${lib}/htmllexer.jar" source="1.5">
       <include name="org/htmlparser/lexerapplications/thumbelina/**/*.java"/>
     </javac>
     <jar jarfile="${lib}/thumbelina.jar"
@@ -387,7 +383,7 @@ Update the Web Site
   </target>
   
   <!-- Create the FilterBuilder jar -->
-  <target name="filterbuilder" depends="JDK1.4,jarparser" description="create filterbuilder.jar" if="JDK1.4">
+  <target name="filterbuilder" depends="JDK_OK,jarparser" description="create filterbuilder.jar" if="JDK1.4">
     <!-- Create the lib directory -->
     <mkdir dir="${lib}"/>
     <mkdir dir="${classes}"/>
@@ -435,34 +431,8 @@ Update the Web Site
     </java>
   </target>
 
-  <!-- Delete the files gathered from the wiki. -->
-  <target name="cleanwiki" description="delete local wiki files">
-    <!-- Delete the content, leave the CVS files. -->
-    <!-- This is done so deleted wiki pages are not left orphaned in CVS. -->
-    <delete failonerror="false">
-      <fileset dir="${wiki}">
-        <filename name="**/*"/>
-        <not>
-          <filename name="*CVS*"/>
-        </not>
-      </fileset>
-    </delete>
-  </target>
-  
-  <!-- Capture the wiki -->
-  <target name="wiki" depends="jar,cleanwiki" description="capture the wiki">
-    <java classname="org.htmlparser.parserapplications.WikiCapturer" fork="yes" failonerror="yes">
-      <classpath>
-        <pathelement location="${lib}/htmlparser.jar"/>
-      </classpath>
-      <arg value="http://htmlparser.sourceforge.net/wiki/"/>
-      <arg value="${wiki}"/>
-      <arg value="true"/>
-    </java>
-  </target>
-
   <!-- Create the javadoc for the project -->
-  <target name="javadoc" depends="JDK1.4,JDK_Warning,init" description="create JavaDoc (API) documentation">
+  <target name="javadoc" depends="JDK_OK,JDK_Warning,init" description="create JavaDoc (API) documentation">
     <mkdir dir="${classes}"/>
     <javac srcdir="${resources}" includes="HtmlTaglet.java" classpath="${classes}"/>
     <mkdir dir="${docs}/javadoc"/>
@@ -507,6 +477,34 @@ Update the Web Site
     <delete file="${resources}/HtmlTaglet.class"/>
   </target>
 
+    <!-- Create the javadoc for the project -->
+  <target name="checkjavadoc" depends="JDK_OK,JDK_Warning,init" description="create JavaDoc (API) documentation">
+    <mkdir dir="${classes}"/>
+    <javac srcdir="${resources}" includes="HtmlTaglet.java" classpath="${classes}"/>
+    <mkdir dir="${docs}/checkjavadoc"/>
+    <property name="javadoc.doctitle" value="HTML Parser ${versionNumber}"/>
+    <property name="javadoc.header" value="&lt;A HREF=&quot;http://htmlparser.sourceforge.net&quot; target=&quot;_top&quot;>HTML Parser Home Page&lt;/A>"/>
+    <property name="javadoc.footer" value="&amp;copy; 2005 Derrick Oswald&lt;div align=&quot;right&quot;&gt;${TODAY_STRING}&lt;/div&gt;"/>
+    <property name="javadoc.bottom" value="&lt;table width='100%'&gt;&lt;tr&gt;&lt;td&gt;HTML Parser is an open source library released under
+    &lt;a HREF=&quot;http://www.opensource.org/licenses/lgpl-license.html&quot; target=&quot;_top&quot;&gt;LGPL&lt;/a&gt;.&lt;/td&gt;&lt;td align='right'&gt;
+    &lt;a HREF=&quot;http://sourceforge.net/projects/htmlparser&quot; target=&quot;_top&quot;&gt;
+    &lt;img src=&quot;http://sourceforge.net/sflogo.php?group_id=24399&amp;type=1&quot; width=&quot;88&quot; height=&quot;31&quot; border=&quot;0&quot; alt=&quot;SourceForge.net&quot;&gt;&lt;/a&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;"/>
+    <javadoc doclet="com.sun.tools.doclets.doccheck.DocCheck"
+           docletpath="/home/derrick/htmlparser_cvs/htmlparser/doccheck1.2b2/doccheck.jar"
+           packagenames="org.htmlparser.*"
+           sourcepath="${src}"
+           classpath="${classes}"
+           defaultexcludes="yes"
+           excludepackagenames="org.htmlparser.tests.*"
+           destdir="${docs}/checkjavadoc"
+           author="true"
+           version="true"
+           overview="${src}/doc-files/overview.html">
+    </javadoc>
+    <copy file="${resources}/inherit.gif" tofile="${docs}/javadoc/resources/inherit.gif" overwrite="true"/>
+    <delete file="${resources}/HtmlTaglet.class"/>
+  </target>
+  
   <target name="release" depends="jar,thumbelina,filterbuilder,javadoc" description="prepare the release files">
   </target>
 
