--- a/build.xml
+++ b/build.xml
@@ -260,12 +260,15 @@ Update the Web Site
 
   <target name="compile" description="compile all java files">
     <mkdir dir="${classes}"/>
-    <javac srcdir="${src}" destdir="${classes}" includes="org/htmlparser/**" excludes="org/htmlparser/tests/**" debug="on" classpath="${classes}" source="1.3"/>
+    <javac srcdir="${src}" destdir="${classes}" includes="org/htmlparser/**"
+           excludes="org/htmlparser/tests/**" debug="on" classpath="${classes}"
+           source="1.7" encoding="iso-8859-1"/>
   </target>
 
   <target name="compilelexer" description="compile lexer java files">
     <mkdir dir="${classes}"/>
-    <javac srcdir="${src}" destdir="${classes}" debug="on" classpath="{classes}" target="1.1" source="1.3">
+    <javac srcdir="${src}" destdir="${classes}" debug="on"
+           classpath="{classes}" target="1.7" source="1.7" encoding="iso-8859-1">
       <include name="org/htmlparser/lexer/*.java"/>
       <include name="org/htmlparser/nodes/*.java"/>
       <include name="org/htmlparser/Attribute.java"/>
@@ -290,7 +293,8 @@ Update the Web Site
 
   <target name="compileparser" depends="compilelexer" description="compile parser java files">
     <mkdir dir="${classes}"/>
-    <javac srcdir="${src}" destdir="${classes}" debug="on" classpath="{classes}:${sax2.jar}" source="1.3">
+    <javac srcdir="${src}" destdir="${classes}" debug="on"
+           classpath="{classes}:${sax2.jar}" source="1.7" encoding="iso-8859-1">
       <include name="org/htmlparser/**/*.java"/>
       <exclude name="org/htmlparser/tests/**"/>
       <exclude name="org/htmlparser/lexerapplications/**/*.java"/>
@@ -371,7 +375,8 @@ Update the Web Site
     <!-- Create the lib directory -->
     <mkdir dir="${lib}"/>
     <mkdir dir="${classes}"/>
-    <javac srcdir="${src}" destdir="${classes}" debug="on" classpath="${classes}:${lib}/htmlparser.jar" source="1.5">
+    <javac srcdir="${src}" destdir="${classes}" debug="on"
+           classpath="${classes}:${lib}/htmlparser.jar" source="1.7" encoding="iso-8859-1">
       <include name="org/htmlparser/lexerapplications/thumbelina/**/*.java"/>
     </javac>
     <jar jarfile="${lib}/thumbelina.jar"
@@ -390,7 +395,9 @@ Update the Web Site
     <!-- Create the lib directory -->
     <mkdir dir="${lib}"/>
     <mkdir dir="${classes}"/>
-    <javac srcdir="${src}" destdir="${classes}" debug="on" classpath="${classes}:${lib}/htmlparser.jar" source="1.3">
+    <javac srcdir="${src}" destdir="${classes}" debug="on"
+           classpath="${classes}:${lib}/htmlparser.jar" source="1.7"
+           encoding="iso-8859-1">
       <include name="org/htmlparser/parserapplications/filterbuilder/**/*.java"/>
     </javac>
     <jar jarfile="${lib}/filterbuilder.jar"
@@ -414,7 +421,9 @@ Update the Web Site
   <!-- Run the unit tests -->
   <target name="test" depends="jar" description="run the JUnit tests">
     <mkdir dir="${classes}"/>
-    <javac srcdir="${src}" destdir="${classes}" includes="org/htmlparser/tests/**" debug="on" source="1.3">
+    <javac srcdir="${src}" destdir="${classes}"
+           includes="org/htmlparser/tests/**" debug="on" source="1.7"
+           encoding="iso-8859-1">
       <classpath>
         <pathelement location="${classes}"/>
         <pathelement location="${junit.jar}"/>
@@ -437,7 +446,8 @@ Update the Web Site
   <!-- Create the javadoc for the project -->
   <target name="javadoc" depends="JDK_OK,JDK_Warning,init" description="create JavaDoc (API) documentation">
     <mkdir dir="${classes}"/>
-    <javac srcdir="${resources}" includes="HtmlTaglet.java" classpath="${classes}"/>
+    <javac srcdir="${resources}" includes="HtmlTaglet.java"
+           classpath="${classes}" encoding="iso-8859-1"/>
     <mkdir dir="${docs}/javadoc"/>
     <property name="javadoc.doctitle" value="HTML Parser ${versionNumber}"/>
     <property name="javadoc.header" value="&lt;A HREF=&quot;http://htmlparser.sourceforge.net&quot; target=&quot;_top&quot;>HTML Parser Home Page&lt;/A>"/>
@@ -482,7 +492,8 @@ Update the Web Site
     <!-- Create the javadoc for the project -->
   <target name="checkjavadoc" depends="JDK_OK,JDK_Warning,init" description="create JavaDoc (API) documentation">
     <mkdir dir="${classes}"/>
-    <javac srcdir="${resources}" includes="HtmlTaglet.java" classpath="${classes}"/>
+    <javac srcdir="${resources}" includes="HtmlTaglet.java"
+           classpath="${classes}" encoding="iso-8859-1"/>
     <mkdir dir="${docs}/checkjavadoc"/>
     <property name="javadoc.doctitle" value="HTML Parser ${versionNumber}"/>
     <property name="javadoc.header" value="&lt;A HREF=&quot;http://htmlparser.sourceforge.net&quot; target=&quot;_top&quot;>HTML Parser Home Page&lt;/A>"/>
